<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="br.com.rafaeltakiyama.sampledatabinding.viewmodel.UserViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_title_dados_cadastrais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/view"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_green"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_cliente" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/view"
                android:layout_toRightOf="@+id/view"
                android:text="@string/txt_title_dados_cadastrais"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_title_dados_cadastrais">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_nome"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:text="@={userViewModel.nome}" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_input_layout_nome"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_endereco"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="200"
                        android:text="@={userViewModel.endereco}" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ln_container_comp_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_input_layout_endereco"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_layout_complemento"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.5"
                        android:paddingRight="3dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edt_txt_complemento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_complemento"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLength="20"
                            android:text="@={userViewModel.complemento}" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_layout_bairro"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.5">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/edt_txt_bairro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_bairro"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLength="50"
                            android:text="@={userViewModel.bairro}" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ln_container_comp_end"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_cidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_cidade"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="50"
                        android:text="@={userViewModel.cidade}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_cep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txt_input_layout_cidade"
                    android:gravity="bottom">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_cep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_cep"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:text="@={userViewModel.cep}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_input_layout_cep"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_telefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_telefone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="30"
                        android:text="@={userViewModel.telefone}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_input_layout_telefone"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_celular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_celular"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="30"
                        android:text="@={userViewModel.celular}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_input_layout_celular"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLength="100"
                        android:text="@={userViewModel.email}" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

        </ScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_add"
            android:onClick="@{userViewModel::onClickAddUser}"
            />

    </RelativeLayout>
</layout>

